# fnorm

./: .fnorm.toml  .gitignore  Cargo.toml  LICENSE  Project Structure.md  README.md
src/: cleanup.rs  cli.rs  config.rs  fs.rs  image_meta.rs  index.rs  main.rs  renamer.rs  template.rs  util.rs  walker.rs
