[package]
name = "fnorm"
version = "0.1.0"
edition = "2024"

description = "Rename bulk files with simple patterns"
repository = "https://github.com/HardBoss07/fnorm"
license = "MIT"
keywords = ["file", "filesystem", "tool", "bulk", "cli"]
categories = ["filesystem", "command-line-utilities"]
readme = "README.md"

include = [
    "src/**",
    ".fnorm.toml",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5.58", features = ["derive"] }
walkdir = "2.5.0"
image = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"